Bug 101401 - [REGRESSION][BISECTED] GDM fails to start after 8ec4975cd83365c791a1
Summary: [REGRESSION][BISECTED] GDM fails to start after 8ec4975cd83365c791a1
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: All All
: medium major
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-13 04:08 UTC by Aaron Watry
Modified: 2017-06-15 00:26 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Aaron Watry 2017-06-13 04:08:14 UTC
I rebuilt/installed mesa earlier this evening and not long after, my system hung.

Upon reboot, the GDM login screen was corrupted and attempts to login caused gnome-shell to crash almost immediately after.

Hardware: AMD Ryzen R7 1700, Radeon HD 7850 1GB
Software: Ubuntu 17.04 64-bit with LLVM/Mesa from trunk/git.

A bisect run shows this as the culprit:

8ec4975cd83365c791a1852a6515ed5d4ade2daf is the first bad commit
commit 8ec4975cd83365c791a1852a6515ed5d4ade2daf
Author: Dave Airlie <airlied@redhat.com>
Date:   Tue Jun 13 05:33:19 2017 +1000

    st_glsl_to_tgsi: don't try and pass 32-bit values to get_deref_offsets
    
    Just use a temporary 16-bit index.
    
    This fixes coverity issue, pointed to me by Ilia.
    
    Reviewed-by: Samuel Pitoiset <samuel.pitoiset@gmail.com>
    Signed-off-by: Dave Airlie <airlied@redhat.com>

:040000 040000 38cec44b25ea12b442370353240f77182c4fd5d6 ae9afe7163541fd192331025f1d8becf9e8942b0 M	src
Comment 1 Aaron Watry 2017-06-13 04:09:10 UTC
There's no general gallium component to report this under, but I'm assuming that it affects other drivers as well.
Comment 2 Michel Dänzer 2017-06-13 09:24:24 UTC
Thanks for the report, fixed in Git:

Module: Mesa
Branch: master
Commit: 6d8a387f78cdeedc8c404a1b4c116a19023f2e19
URL:    http://cgit.freedesktop.org/mesa/mesa/commit/?id=6d8a387f78cdeedc8c404a1b4c116a19023f2e19

Author: Samuel Pitoiset <samuel.pitoiset@gmail.com>
Date:   Tue Jun 13 10:03:52 2017 +0200

st_glsl_to_tgsi: init index to 0 before get_deref_offsets()
Comment 3 Aaron Watry 2017-06-15 00:26:47 UTC
I can verify that this is fixed for me.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.